@@ -301,6 +301,7 @@ const char *tags[] = {
 	"vifm-:ls",
 	"vifm-:lstrash",
 	"vifm-:m",
+	"vifm-:m_chi",
 	"vifm-:ma",
 	"vifm-:map",
 	"vifm-:mark",
@@ -793,6 +794,7 @@ const char *tags[] = {
 	"vifm-m",
 	"vifm-m_/",
 	"vifm-m_:",
+	"vifm-m_:chistory",
 	"vifm-m_:cnew",
 	"vifm-m_:cnewer",
 	"vifm-m_:col",
